--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   </head>
   <body>
+    <!-- Starry background -->
+    <div class="stars" id="stars"></div>
+
     <!-- Canvas for Three.js -->
     <canvas id="globeCanvas"></canvas>
 
@@ -33,12 +36,12 @@
     <div class="sponsors-bar">
       <p class="powered-by">Powered by</p>
       <div class="sponsor-logos">
-        <span>@Supabase</span>
-        <span>@Netlify</span>
-        <span>@CloudflareDev</span>
-        <span>@GetSentry</span>
-        <span>@Loops</span>
-        <span>@AlgoFoundation</span>
+        <img src="https://seeklogo.com/images/S/supabase-logo-DCC676FFE2-seeklogo.com.png" alt="Supabase" class="sponsor-logo" />
+        <img src="https://cdn.worldvectorlogo.com/logos/netlify.svg" alt="Netlify" class="sponsor-logo" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/94/Cloudflare_Logo.png" alt="Cloudflare" class="sponsor-logo" />
+        <img src="https://seeklogo.com/images/S/sentry-logo-36928B74C1-seeklogo.com.png" alt="Sentry" class="sponsor-logo" />
+        <img src="https://loops.so/favicon.png" alt="Loops" class="sponsor-logo" />
+        <img src="https://algorand.com/static/algorand-logo-white-782ed4f6bf657cec9c7f69f361eb20ce.svg" alt="Algorand Foundation" class="sponsor-logo" />
       </div>
     </div>
 
