--- a/index.html
+++ b/index.html
@@ -48,12 +48,30 @@
     <div class="sponsors-bar">
       <p class="powered-by">Powered by</p>
       <div class="sponsor-logos">
-        <img src="https://seeklogo.com/images/S/supabase-logo-DCC676FFE2-seeklogo.com.png" alt="Supabase" class="sponsor-logo" />
-        <img src="https://cdn.worldvectorlogo.com/logos/netlify.svg" alt="Netlify" class="sponsor-logo" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/94/Cloudflare_Logo.png" alt="Cloudflare" class="sponsor-logo" />
-        <img src="https://seeklogo.com/images/S/sentry-logo-36928B74C1-seeklogo.com.png" alt="Sentry" class="sponsor-logo" />
-        <img src="https://pbs.twimg.com/profile_images/1729539310058147840/iE5EGXW3_400x400.jpg" alt="Loops" class="sponsor-logo" />
-        <img src="https://pbs.twimg.com/profile_images/1805829136381861889/0fI5Zrbv_400x400.jpg" alt="Algorand Foundation" class="sponsor-logo" />
+        <div class="sponsor-item">
+          <img src="https://seeklogo.com/images/S/supabase-logo-DCC676FFE2-seeklogo.com.png" alt="Supabase" class="sponsor-logo" />
+          <span class="sponsor-name">Supabase</span>
+        </div>
+        <div class="sponsor-item">
+          <img src="https://cdn.worldvectorlogo.com/logos/netlify.svg" alt="Netlify" class="sponsor-logo" />
+          <span class="sponsor-name">Netlify</span>
+        </div>
+        <div class="sponsor-item">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/9/94/Cloudflare_Logo.png" alt="Cloudflare" class="sponsor-logo" />
+          <span class="sponsor-name">Cloudflare</span>
+        </div>
+        <div class="sponsor-item">
+          <img src="https://seeklogo.com/images/S/sentry-logo-36928B74C1-seeklogo.com.png" alt="Sentry" class="sponsor-logo" />
+          <span class="sponsor-name">Sentry</span>
+        </div>
+        <div class="sponsor-item">
+          <img src="https://pbs.twimg.com/profile_images/1729539310058147840/iE5EGXW3_400x400.jpg" alt="Loops" class="sponsor-logo" />
+          <span class="sponsor-name">Loops</span>
+        </div>
+        <div class="sponsor-item">
+          <img src="https://pbs.twimg.com/profile_images/1805829136381861889/0fI5Zrbv_400x400.jpg" alt="Algorand Foundation" class="sponsor-logo" />
+          <span class="sponsor-name">Algorand</span>
+        </div>
       </div>
     </div>
 
